--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId 'com.raminabbasiiii.movies'
         minSdk 21
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -124,6 +124,14 @@ dependencies {
 
     //--Image Slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+    // arrow
+    
+    implementation("io.arrow-kt:arrow-optics:1.0.1")
+    implementation(platform("io.arrow-kt:arrow-stack:1.0.1"))
+
+    implementation("io.arrow-kt:arrow-core")
+    implementation("io.arrow-kt:arrow-fx-coroutines")
 
 }
 kapt {
